  more comprehensive.
- ebnf.py: bugfix for linefeed whitespace-parser and added linestart
  whitespace-parser.
- parse.py: removed methods for combining parsers, i.e. turn cascades
  of nested Series, Interleave or Alternative parsers into one
  flat parser with a longer list of arguments, because these are
  practically never needed and have undesired side-effects.
- EXPERIMENTAL: started a nim-rewrite of the parser core to increase
  parser speed to the level of a compiled language, i.e. nim (nim-lang.org)


DHParser Version 1.4.2 (19.4.2023)
..................................

- NEW: Macros for EBNF grammars added!
- better support for (post-)processing pipelines (dsl.py and compile.py)
- added an (autogenerated) ...App.py script that allows to select files
  for compilation with a simple GUI. (This helps deploying projects
  for users that are not used to the command line.)
  Like the ...Parser.py and ...Server.py-scripts, this script is
  generated when running the grammar-tests-script for the first time in
  a new project.
- refactoring of the template for autogenerated ...Parser.py-scripts
  to make them shorter and more readable.
- autogenerated tst_..._grammar.py-script will generate ...Server.py
  and ...App.py script only once and not regenerate them automatically
  if they have been deleted. Pass "--scripts" on the command line to
  re-create these scripts if needed.
- nodetree.py: support for SXML-serialization
  (see https://okmij.org/ftp/Scheme/SXML.html)


DHParser Version 1.3.5 (10.2.2023)
..................................

- bugfixes, some to restore broken backwards compatibility


DHParser Version 1.3.4 (30.1.2023)
..................................

- bugfix ebnf.py: possible name conflics between symbol names in a grammar
  and parser class names in DHParser.parse will now be evaded
- backwards incompatible change: ident-parameter removed from
  DHParser.toollkit.ThreadLocalSingletonFactory
- various bugfixes

